--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body {
-  background-color: aqua;
-}
+* {margin: 0;
+    padding: 0;
+    box-sizing: border-box;}
+
+
+header { background-color: #4ea0ff;
+        background-image: url('img/img/pattern.png');
+
+
+}    
