--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
-* {margin: 0;
-    padding: 0;
-    box-sizing: border-box;}
 
 
 header { background-color: #4ea0ff;
         background-image: url('img/img/pattern.png');
-
-
 }    
+
+h1 {margin-bottom: 0cm;}
+
+.sotto {margin: 0cm;}
+.sotto1 {margin-bottom: 20px;}
+
+h2 {color: #808080;}
+
+a {color: #3cb4e7; text-decoration: none;}
+
+h6 {margin: 0cm;}
+
+.fotofine1 {
+            width: 311px;
+            height: 207px;
+            color: white;
+            background-image: url('img/img/monitor.jpg');
+}
+
+.fotofine2 {
+            width: 311px;
+            height: 207px;
+            color: white;
+            background-image: url('img/img/graph.jpg');
+}
